--- a/app/component/Bridge.css
+++ b/app/component/Bridge.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: auto;
+    height: 120vh;
     z-index: 0;
     padding-top: 7rem;
     color: #8D7B68;
@@ -99,6 +99,7 @@
     .bridge-container {
         padding-top: 2rem;
         gap: 1rem;
+        height: auto;
     }
 
     .Bridge-title {
