--- a/app/component/Audio/Audioplayer.css
+++ b/app/component/Audio/Audioplayer.css
@@ -1,4 +1,4 @@
-.Audio-click{
+/* .Audio-click{
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -7,7 +7,7 @@
     align-items: end;
     padding-right: 100px;
     padding-bottom: 70px;
-}
+} */
 
 .Audio-toggle{
     z-index: 1;
@@ -21,6 +21,8 @@
     border-radius: 50%;
     transition: all .2s ease-in-out;
     opacity: 1;
+    margin-left: 68rem;
+    margin-top: 28rem;
 }
 
 .hidden{
@@ -35,9 +37,7 @@
         height: 60px;
         width: 60px;
         font-size: 14px;
-    }
-    .Audio-click{
-        padding-right: 20px;
-        padding-bottom: 100px;
+        margin-left: 19.3rem;
+        margin-top: 38rem;
     }
 }
