--- a/app/component/Audio/Audioplayer.css
+++ b/app/component/Audio/Audioplayer.css
@@ -19,14 +19,15 @@
     height: 70px;
     width: 70px;
     border-radius: 50%;
-    transition: all .2s ease-in-out;
     opacity: 1;
     margin-left: 68rem;
     margin-top: 28rem;
+    transition: all .2s ease-in-out;
 }
 
 .hidden{
     opacity: 0;
+    transition: all .2s ease-in-out;
 }
 .visible{
     opacity: 1;
@@ -38,6 +39,6 @@
         width: 60px;
         font-size: 14px;
         margin-left: 19.3rem;
-        margin-top: 32rem;
+        bottom: 9rem;
     }
 }
