--- a/app/page.css
+++ b/app/page.css
@@ -1,71 +1,34 @@
-*,body,html{
+*, body, html {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
 
-.container{
+.container {
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
 }
 
-.nav-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 13vh;
-    position: fixed;
-    color: white;
-    font-family: 'Roboto Slab', serif;
-    font-size: 15px;
-    z-index: 1;
-}
+.position {
+    overflow: hidden;
 
-.nav-scrol{
-    width: 100%;
-    height: 100%;
-    background-color: #8D7B68;
-    position: absolute;
-    z-index: 1;
-    opacity: 0;
 }
-
-.nav-link{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-inline: 2rem;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    position: absolute;
-}
-
-.nav-linkto{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 50%;
-    height: 100%;
-}
-
 
 
 
 /* end nav */
 
-.wrapper{
+.wrapper {
     width: 100%;
     height: auto;
     top: 0;
     z-index: 0;
 }
 
-.landing{
+.landing {
     background-image: url(./Image/landing.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -81,32 +44,38 @@
     color: white;
 }
 
-.title{
+.title {
     font-size: 35px;
     font-family: 'Roboto Slab', serif;
 }
 
-.name-wed{
+.name-wed {
     font-size: 60px;
     font-weight: bolder;
     font-family: 'Parisienne', cursive;
 }
-.z-index{
+
+.z-index {
     z-index: 0;
 }
+
 @media only screen and (max-width: 768px) {
+
     /* For mobile phones: */
-    .landing{
+    .landing {
         gap: .5rem;
     }
-    .title{
+
+    .title {
         font-size: 15px;
     }
-    .name-wed{
+
+    .name-wed {
         font-size: 40px;
-        font-weight:500;
+        font-weight: 500;
     }
-    .nav-container{
+
+    .nav-container {
         display: none;
     }
-  }
+}
