--- a/app/Navbarm/Navbarm.css
+++ b/app/Navbarm/Navbarm.css
@@ -1,4 +1,5 @@
 .Navbar-m{
+    visibility: visible;
     position: fixed;
     z-index: 1;
     bottom: 0;
@@ -10,6 +11,10 @@
     background-color: white;
     font-family: 'Roboto Slab', serif;
     color: rgb(164, 164, 164);
+}
+
+.hidden{
+    visibility: hidden;
 }
 
 .Navbar-click{
