--- a/app/page.css
+++ b/app/page.css
@@ -14,11 +14,53 @@
 
 .position {
     overflow: hidden;
-
 }
 
 
+.nav-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 13vh;
+    position: fixed;
+    color: white;
+    font-family: 'Roboto Slab', serif;
+    font-size: 15px;
+    z-index: 1;
+}
 
+.hidden{
+    visibility: hidden;
+}
+
+.nav-scrol{
+    width: 100%;
+    height: 100%;
+    background-color: #8D7B68;
+    position: absolute;
+    z-index: 1;
+    opacity: 0;
+}
+
+.nav-link{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-inline: 2rem;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    position: absolute;
+}
+
+.nav-linkto{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+}
 /* end nav */
 
 .wrapper {
