--- a/app/component/gift/GiftSend.css
+++ b/app/component/gift/GiftSend.css
@@ -11,6 +11,9 @@
     z-index: 1;
 }
 .Giftsend-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 60%;
     height: 90%;
     overflow:auto;
@@ -70,6 +73,70 @@
     color: rgb(57, 57, 57);
 }
 
+.Giftsend-bottom{
+    height: 60%;
+    width: 90%;
+}
+.Bank-wrapper{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    padding-inline:1rem ;
+    width: 100%;
+    height: 50px;
+    background-color: rgb(246, 246, 246);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    
+}
+
+.Bank-btn{
+    color:  rgb(117, 117, 117);
+    text-align: start;
+    width: auto;
+    height: 70%;
+    border-bottom: 5px solid  rgb(246, 246, 246);
+    font-size: 16px;  
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.B-active{
+    border-bottom: 5px solid #8D7B68;
+    color:  rgb(57, 57, 57);
+}
+
+.Bank-barcode{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    width: 100%;
+    height: 90%;
+}
+
+.barcode-wrapper{
+    padding-top: 10%;
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    font-family: 'Roboto Slab', serif;
+}
+
+.image-barcode{
+    width: 35%;
+    height: 35%;
+}
+
+.barcode-desk{
+    font-size: 15px;
+}
+
 @media only screen and (max-width: 768px) {
     .Giftsend-wrapper{
         height: 60%;
@@ -79,5 +146,19 @@
     .Giftsend-desk{
         font-size: 10px;
         letter-spacing: .2px;
+    }
+    .Bank-btn{
+        font-size: 10px;
+    }
+    .image-barcode{
+        width: 40%;
+        height: 40%;
+    }
+    .barcode-desk{
+        font-size: 10px;
+        letter-spacing: .2px;
+    }
+    .barcode-wrapper{
+        padding-top: 5px;
     }
 }
